--- a/getting-started-master/app/src/static/css/styles.css
+++ b/getting-started-master/app/src/static/css/styles.css
@@ -38,7 +38,7 @@ button:focus {
     border: 1px solid #333;
 }
 
-div {
+.image {
     display: flex;
     justify-content: center;
     height: 800px;
